# leAudio

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: WaveForm.tsx
